--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,9 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - images/restaurant.jpg
+    - images/transp_sonho.png
     - images/LogoMoseTransparency.png
+    - images/DimensoesCompetencias.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
