--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ flutter:
     - images/transp_sonho.png
     - images/LogoMoseTransparency.png
     - images/DimensoesCompetencias.png
+    - images/arquiteturaMose_transp.png
+    - images/MoseCompetencias_transp.png
+    - images/ComponentesCompetenciaMose_transp.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
