--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,11 @@ flutter:
     - images/arquiteturaMose_transp.png
     - images/MoseCompetencias_transp.png
     - images/ComponentesCompetenciaMose_transp.png
-    - THCompetenciasFluxo.png
+    - images/THCompetenciasFluxo.png
+    - images/GQCompetenciasFluxo.png
+    - images/CMCompetenciasFluxo.png
+    - images/INCompetenciaFluxo.png
+    - images/SMACompetenciasFluxo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
